<resources>
    <string name="app_name">Ranchapp</string>
    <string name="registro">Registro</string>
    <string name="logout">logout</string>
    <string name="login">Login</string>
    <string name="registrar">Registrar</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="mail">Mail:</string>
    <string name="empieza_a_disfrutar_de_la_nueva_forma_de_crear_eventos">Empieza a disfrutar de la nueva forma de crear eventos</string>
    <string name="unete_a_la_ranchfam">UNETE A LA RANCHFAM</string>
    <string name="nombre">Nombre:</string>
    <string name="ranchapp">RANCHAPP</string>
    <string name="list_para_ranchear">¿List@ para ranchear?</string>
    <string name="hola_de_nuevo">HOLA DE NUEVO</string>
    <string name="beer">beer</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="crear_evento">Crear Evento</string>
    <string name="ver_eventos">Ver Eventos</string>
    <string name="Salir">Salir</string>
    <string name="crear_nuevo_evento">Crear Nuevo Evento</string>
    <string name="crear">Crear</string>
    <string name="titulo_del_evento">Título del evento</string>
    <string name="fecha_del_evento">Fecha del evento</string>
    <string name="lugar_del_evento">Lugar del evento</string>
    <string name="descripcion_del_evento">Descripcion del evento</string>
    <string name="llevame">Llevame</string>
    <string name="volver">Volver</string>
    <string name="apellido">Apellido:</string>
    <string name="datos_usuario">Datos usuario:</string>

</resources>